gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-decl_macro.rs
#![allow(unused_macros)]

macro m() {} // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

